--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/native": "^7.1.10",
     "expo": "~53.0.9",
     "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
-    "@expo/vector-icons": "^14.1.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
-    "react-native-screens": "~4.11.1",
+    "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "5.4.0",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "react-native-screens": "~4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
