--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/native": "^7.1.10",
+    "cors": "^2.8.5",
     "expo": "~53.0.9",
     "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
+    "express": "^5.1.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-dotenv": "^3.4.11",
