--- a/.env
+++ b/.env
@@ -1,16 +1,16 @@
-ESP32_BASE_URL=http://192.168.4.1
-ESP32_TIMEOUT=5000
-ESP32_DATA_ENDPOINT=/xml
-ESP32_CONTROL_ENDPOINT=/genericArgs
+ESP32_BASE_IP=192.168.4.1
+ESP32_TIMEOUT=10000
+ESP32_DATA_ENDPOINT=/data
+ESP32_CONTROL_ENDPOINT=/relay
 ESP32_INFO_ENDPOINT=/
 
 MOCK_PASSWORD_1=test123
 MOCK_PASSWORD_2=admin
 MOCK_DELAY=600
 
-AUTO_REFRESH_INTERVAL=5000
-ENABLE_CONSOLE_LOGS=false
-SHOW_DEV_INDICATOR=false
+AUTO_REFRESH_INTERVAL=3000
+ENABLE_CONSOLE_LOGS=true
+SHOW_DEV_INDICATOR=true
 
 ENCRYPTION_KEY=your-32-character-encryption-key-here
 STORAGE_SALT=your-salt-for-password-hashing
